<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/last_hour"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/last_hour" />
    <item
        android:id="@+id/last_3_hours"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/last_3_hours" />
    <item
        android:id="@+id/this_day"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/this_day" />
    <item
        android:id="@+id/all"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/all" />

</menu>