<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/linear_layout_margin_top">

            <TextView
                android:id="@+id/titleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_detail_margin_bottom"
                android:layout_marginEnd="@dimen/title_detail_margin_end"
                android:layout_marginStart="@dimen/title_detail_margin_start"
                android:layout_marginTop="@dimen/title_detail_margin_top"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_detail_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.01999998" />

            <ImageView
                android:id="@+id/imageViewDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_detail_layout_height"
                android:layout_marginBottom="@dimen/img_detail_margin_bottom"
                android:layout_marginEnd="@dimen/img_detail_margin_end"
                android:layout_marginStart="@dimen/img_detail_margin_start"
                android:layout_marginTop="@dimen/img_detail_margin_top"
                android:contentDescription="@string/img_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/descriptionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/description_detail_margin_end"
                android:layout_marginStart="@dimen/description_detail_margin_start"
                android:text="@string/description"
                android:textSize="@dimen/description_detail_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDetail" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>