<?xml version="1.0" encoding="utf-8"?>

    <android.support.v7.widget.CardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/divider"
                android:layout_width="@dimen/divider_width"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/divider_margin_bottom"
                android:layout_marginEnd="@dimen/divider_margin_end"
                android:layout_marginStart="@dimen/divider_margin_start"
                android:layout_marginTop="@dimen/divider_margin_top"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.34"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="@dimen/title_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin_bottom"
                android:layout_marginEnd="@dimen/title_margin_end"
                android:layout_marginStart="@dimen/title_margin_start"
                android:layout_marginTop="@dimen/title_margin_top"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/description"
                android:layout_width="@dimen/description_layout_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_margin_bottom"
                android:layout_marginEnd="@dimen/description_margin_end"
                android:layout_marginStart="@dimen/description_margin_start"
                android:layout_marginTop="@dimen/description_margin_top"
                android:text="@string/description"
                android:textSize="@dimen/description_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/img_layout_width"
                android:layout_height="@dimen/img_layout_height"
                android:layout_marginBottom="@dimen/img_margin_bottom"
                android:layout_marginEnd="@dimen/divider_margin_end"
                android:layout_marginStart="@dimen/img_margin_start"
                android:layout_marginTop="@dimen/img_margin_top"
                android:contentDescription="@string/img_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


